<resources>
    <string name="app_name">Mis Series</string>
    <string name="title_signup">Sign Up</string>
    <string name="input_name_signup">name</string>
    <string name="input_email_signup">email</string>
    <string name="required_field">*required field</string>
    <string name="input_password_signup">password</string>
    <string name="input_repeat_password_signup">repeat password</string>
    <string name="boton_register_signup">register</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fecha_de_nacimiento">birthday</string>
    <string name="favorites">suspense</string>
    <string name="terror">terror</string>
    <string name="accion">accion</string>
    <string name="romance">romance</string>
    <string name="Psicodelic">psicodelic</string>
    <string name="drama">drama</string>
    <string name="ciudad_de_nacimiento">city of born</string>
    <string name="generos">select your genere</string>
    <string name="series">select type of series</string>
    <string name="empt">the field is empty</string>
    <string name="err">the passwords are different</string>
    <string-array name="ciudades">
        <item>Medellín</item>
        <item>Bogota</item>
        <item>Barranquilla</item>
        <item>Cali</item>
        <item>Bucarmanaga</item>
    </string-array>
</resources>